fixed projects page overlapping bug on small screens

--- a/client/src/css/Projects.css
+++ b/client/src/css/Projects.css
@@ -1,16 +1,8 @@
-.category-tabs {
-  height: 100vh;
-}
-
 .category-tabs h1 {
   text-align: center;
   font-weight: bold;
   padding-top: 0.3em;
   font-family: 'Open Sans', sans-serif;
-}
-
-.projects-grid {
-  height: 100%;
 }
 
 /* Display for larger screens*/
